[gd_scene load_steps=13 format=3 uid="uid://bdhcbglqmpm8g"]

[ext_resource type="Script" path="res://segment_intersection.gd" id="1_gexch"]
[ext_resource type="PackedScene" uid="uid://derskiomatdqh" path="res://coordinate_system.tscn" id="2_fqoul"]
[ext_resource type="Texture2D" uid="uid://ccrcrn541ivmn" path="res://assets/playpause.png" id="3_kli4u"]
[ext_resource type="Script" path="res://buttons/play_pause_btn.gd" id="4_uooql"]
[ext_resource type="Texture2D" uid="uid://b5kdhhdvy4wmw" path="res://assets/pauseevent.png" id="5_ra6hm"]
[ext_resource type="Script" path="res://buttons/pause_on_event_btn.gd" id="6_yx4ie"]
[ext_resource type="Texture2D" uid="uid://wxsltww2twlq" path="res://assets/minus64.png" id="7_lutgw"]
[ext_resource type="Script" path="res://buttons/minus_speed_btn.gd" id="8_f30n6"]
[ext_resource type="Texture2D" uid="uid://cnahb0875jmr7" path="res://assets/plus64.png" id="9_umx7m"]
[ext_resource type="Script" path="res://buttons/plus_speed_btn.gd" id="10_4yg6k"]
[ext_resource type="Texture2D" uid="uid://nvej8slh8ya" path="res://assets/back.png" id="11_q3evl"]
[ext_resource type="Script" path="res://buttons/back_button.gd" id="12_r5jrw"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_gexch")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1180.0
offset_bottom = 717.0
scale = Vector2(0.972896, 1.00374)
color = Color(0.972549, 0.972549, 0.972549, 1)

[node name="SweepLine" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_right = 1180.0
offset_bottom = 4.0
color = Color(0, 0, 0.533333, 1)

[node name="CoordinateSystem" parent="ColorRect" instance=ExtResource("2_fqoul")]
position = Vector2(3.08358, 69.7392)
points = PackedVector2Array(0, -500, 0, 647, 1144, 647)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 1149.0
offset_right = 1800.0
offset_bottom = 719.0
color = Color(0.980392, 0.980392, 0.921569, 1)

[node name="LinesRTB" type="RichTextLabel" parent="ColorRect2"]
layout_mode = 0
offset_left = 26.0
offset_top = 87.0
offset_right = 639.0
offset_bottom = 226.0
bbcode_enabled = true
text = "Lines: []"

[node name="Label" type="Label" parent="ColorRect2"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 275.0
offset_top = 4.0
offset_right = 386.0
offset_bottom = 65.0
theme_override_font_sizes/font_size = 42
text = "Data"
horizontal_alignment = 1

[node name="EventsRTB" type="RichTextLabel" parent="ColorRect2"]
layout_mode = 0
offset_left = 26.0
offset_top = 226.0
offset_right = 639.0
offset_bottom = 509.0
bbcode_enabled = true
text = "Events: []"

[node name="RemovedLinesRTB" type="RichTextLabel" parent="ColorRect2"]
layout_mode = 0
offset_left = 26.0
offset_top = 522.0
offset_right = 639.0
offset_bottom = 603.0
bbcode_enabled = true
text = "Removed lines: []"

[node name="RemovedEventsRTB" type="RichTextLabel" parent="ColorRect2"]
layout_mode = 0
offset_left = 26.0
offset_top = 615.0
offset_right = 639.0
offset_bottom = 703.0
bbcode_enabled = true
text = "Removed events: []"

[node name="PlayPauseButton" type="TextureButton" parent="ColorRect2"]
layout_mode = 0
offset_left = 7.0
offset_top = 8.0
offset_right = 71.0
offset_bottom = 72.0
toggle_mode = true
texture_normal = ExtResource("3_kli4u")
script = ExtResource("4_uooql")

[node name="PauseEventButton" type="TextureButton" parent="ColorRect2"]
layout_mode = 0
offset_left = 71.0
offset_top = 8.0
offset_right = 135.0
offset_bottom = 72.0
toggle_mode = true
texture_normal = ExtResource("5_ra6hm")
script = ExtResource("6_yx4ie")

[node name="MinusButton" type="TextureButton" parent="ColorRect2"]
layout_mode = 0
offset_left = 199.0
offset_top = 8.0
offset_right = 263.0
offset_bottom = 72.0
texture_normal = ExtResource("7_lutgw")
script = ExtResource("8_f30n6")

[node name="PlusButton" type="TextureButton" parent="ColorRect2"]
layout_mode = 0
offset_left = 135.0
offset_top = 8.0
offset_right = 199.0
offset_bottom = 72.0
texture_normal = ExtResource("9_umx7m")
script = ExtResource("10_4yg6k")

[node name="BackButton" type="TextureButton" parent="ColorRect2"]
layout_mode = 0
offset_left = 548.0
offset_top = 8.0
offset_right = 612.0
offset_bottom = 72.0
texture_normal = ExtResource("11_q3evl")
script = ExtResource("12_r5jrw")

[connection signal="pressed" from="ColorRect2/PlayPauseButton" to="ColorRect2/PlayPauseButton" method="_on_pressed"]
[connection signal="toggled" from="ColorRect2/PauseEventButton" to="ColorRect2/PauseEventButton" method="_on_toggled"]
[connection signal="pressed" from="ColorRect2/MinusButton" to="ColorRect2/MinusButton" method="_on_pressed"]
[connection signal="pressed" from="ColorRect2/PlusButton" to="ColorRect2/PlusButton" method="_on_pressed"]
[connection signal="pressed" from="ColorRect2/BackButton" to="ColorRect2/BackButton" method="_on_pressed"]
